Implementacion de CRUD y Base de Datos Local

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permisos necesarios para leer imágenes desde almacenamiento (para API < 33) -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,31 +17,18 @@
         android:theme="@style/Theme.AppServiciosComunitarios"
         tools:targetApi="31">
 
-        <!-- Pantalla de inicio: Login -->
         <activity
-            android:name=".LoginActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppServiciosComunitarios.NoActionBar">
+            android:name=".ui.ServicioFormActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- Registro de usuarios -->
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false"
-            android:label="Registro"
-            android:theme="@style/Theme.AppServiciosComunitarios.NoActionBar" />
-
-        <!-- Navegación principal -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="Inicio"
-            android:theme="@style/Theme.AppServiciosComunitarios.NoActionBar" />
 
     </application>
 
